
Version 2.7 ->
------------------
 - fixed bug with --module using relative paths (Roman Chyla)
 - 

Version 2.6 -> 2.7
------------------
 - added 'IGNORE' to reserved word list
 - improved --exclude logic to also exclude inner classes of excluded classes
 - moved --find-jvm-dll logic to __init__.py to accomodate Python 2.7
 - fixed bug with faulty Java version logic causing crashes with Java 1.5
 - added logic for finding JavaVM.framework headers on Mac OS X (Bill Janssen)

Version 2.5 -> 2.6
------------------
 - added freebsd7 settings to setup.py (Sujan Shakya)
 - added support for unix-specific --home distutils install parameter
 - added support for extracting JAVAHOME from Windows registry (Bill Janssen)
 - updated MANIFEST.in as sdist started creating incomplete source archives
 - improved support for building on Windows with mingw32 (Bill Janssen)
 - added support for --find-jvm-dll parameter (Bill Janssen)
 - fixed bug with not inheriting type parameters to inner parameterized classes
 - added support for of_() method to set instance type parameters
 - fixed bug with not heeding type parameter for --sequence get method
 - parameterized return values are now unboxed
 - improved auto-boxing of primitive type parameters
 - added support for auto-boxing CharSequence from python str and unicode
 - added support for auto-boxing Number from python int, long and float
 - added 'asm' to list of reserved words
 - added JCC_VERSION string to modules using JCC
 - added support for --resources
 - fixed bug with array Release calls using isCopy instead of 0 mode
 - added support for --import
 - added read-only env.classpath property
 - config.py now written only during build or when missing (Christian Heimes)
 - fixed bug with not enforcing Iterable for iterator method detection

Version 2.4 -> 2.5
------------------
 - added env.jni_version for the JNI version as returned by JNI's GetVersion()
 - added env.java_version for java.lang.System.getProperty('java.version')